adding moren things, still works prop

--- a/index.html
+++ b/index.html
@@ -77,24 +77,80 @@
                     <i class="fa-solid fa-code"></i>
                     <h2>Web Design</h2>
                     <p>sadhfjklhdfkjldashfklhaskljd</p>
-                    <a href="#">learn More</a>
+                    <a href="#">Learn More</a>
                 </div>
                 <div>
                     <i class="fa-brands fa-app-store"></i>
                     <h2>App Design</h2>
                     <p>sadhfjklhdfkjldashfklhaskljd</p>
-                    <a href="#">learn More</a>
+                    <a href="#">Learn More</a>
                 </div>
                 <div>
                     <i class="fa-solid fa-crop"></i>
                     <h2>UI/UX Design</h2>
                     <p>sadhfjklhdfkjldashfklhaskljd</p>
-                    <a href="#">learn More</a>
+                    <a href="#">Learn More</a>
                 </div>
             </div>
         </div>
     </div>
-
+    <!-------------Portfolio------------->
+    <div class="portfolio">
+        <div class="container">
+            <h1 class="sub-title">My Work</h1>
+            <div class="work-list">
+                <div class="work">
+                    <img id="wind" src="images/windTurbine.jpeg">
+                    <div class="layer">
+                        <h3>Wind Tubine</h3>
+                        <p>Self Powered Electric Wind Turbine</p>
+                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    </div>
+                </div>
+                <div class="work">
+                    <img id="wind" src="images/windTurbine.jpeg">
+                    <div class="layer">
+                        <h3>Wind Tubine</h3>
+                        <p>Self Powered Electric Wind Turbine</p>
+                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    </div>
+                </div>
+                <div class="work">
+                    <img id="wind" src="images/windTurbine.jpeg">
+                    <div class="layer">
+                        <h3>Wind Tubine</h3>
+                        <p>Self Powered Electric Wind Turbine</p>
+                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    </div>
+                </div>
+            </div>
+            <a href="#" class="btn">See More</a>
+        </div>
+    </div>
+     <!-------------Contact------------->
+    <div class="contact">
+        <div class="container">
+            <div class="row">
+                <div class="contact-left">
+                    <h1 class="sub-title">Contact Me</h1>
+                    <p><i class="fa-solid fa-paper-plane"></i> Mtzaxl23@gmail.com</p>
+                    <p><i class="fa-solid fa-phone"></i> (503) 860-1773</p>
+                    <div class="social-icons">
+                        <a href="https://github.com/martinea23"><i class="fa-brands fa-github"></i></a>
+                        <a href="https://www.instagram.com/axl_mtz04"><i class="fa-brands fa-instagram"></i></a>
+                    </div>
+                </div>
+                <div class="contact-right">
+                    <form>
+                        <input type="text" name="Name" placeholder="Your Name" required >
+                        <input type="email" name="Email" placeholder="Your Email" required >
+                        <textarea name="message" rows="6" placeholder="Your Message"></textarea>
+                        <button type="submit">Send</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
     <!----Script for changing tabs in about me---->
     <script>
         var tablinks = document.getElementsByClassName("tab-links");
