--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/9d9a242272.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <div id="header">
         <div class="container">
@@ -26,12 +28,12 @@
             </div>
         </div>
     </div>
-<!---------------about----------------------->
+    <!---------------about----------------------->
     <div id="About">
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img id="axlBird"src="images/Axl_birds.JPG">
+                    <img id="axlBird" src="images/Axl_birds.JPG">
                 </div>
                 <div class="about-col-2">
                     <h1 class="subtitle">About Me</h1>
@@ -40,7 +42,7 @@
                         asdhjkfjlhasdljkfhlakjsdhfkljashdfjklfhadjklshfkljasdhf
                     </p>
                     <div class="tab-titles">
-                        <p class="tab-links active-link" onclick="opentab('skills')" >Skills</p>
+                        <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
                         <p class="tab-links" onclick="opentab('experience')">Experience</p>
                         <p class="tab-links" onclick="opentab('education')">Education</p>
                     </div>
@@ -61,7 +63,8 @@
                     <div class="tab-contents" id="education">
                         <ul>
                             <li><span>University of Portland</span><br> Bachleors of Computer Science</li>
-                            <li><span>Central Catholic High School</span><br> graduated with Honors and Spanish excellency award</li>
+                            <li><span>Central Catholic High School</span><br> graduated with Honors and Spanish
+                                excellency award</li>
                         </ul>
                     </div>
                 </div>
@@ -127,7 +130,7 @@
             <a href="#" class="btn">See More</a>
         </div>
     </div>
-     <!-------------Contact------------->
+    <!-------------Contact------------->
     <div class="contact">
         <div class="container">
             <div class="row">
@@ -139,13 +142,14 @@
                         <a href="https://github.com/martinea23"><i class="fa-brands fa-github"></i></a>
                         <a href="https://www.instagram.com/axl_mtz04"><i class="fa-brands fa-instagram"></i></a>
                     </div>
+                    <a href="images/RESUME.pdf" download class="btn btn2">Download Resume</a>
                 </div>
                 <div class="contact-right">
                     <form>
-                        <input type="text" name="Name" placeholder="Your Name" required >
-                        <input type="email" name="Email" placeholder="Your Email" required >
+                        <input type="text" name="Name" placeholder="Your Name" required>
+                        <input type="email" name="Email" placeholder="Your Email" required>
                         <textarea name="message" rows="6" placeholder="Your Message"></textarea>
-                        <button type="submit">Send</button>
+                        <button type="submit" class="btn btn2">Send</button>
                     </form>
                 </div>
             </div>
@@ -156,11 +160,11 @@
         var tablinks = document.getElementsByClassName("tab-links");
         var tabcontents = document.getElementsByClassName("tab-contents");
 
-        function opentab(tabName){
-            for(tablink of tablinks){
+        function opentab(tabName) {
+            for (tablink of tablinks) {
                 tablink.classList.remove("active-link");
             }
-            for(tabcontent of tabcontents){
+            for (tabcontent of tabcontents) {
                 tabcontent.classList.remove("active-tab");
             }
             event.currentTarget.classList.add("active-link");
@@ -169,4 +173,5 @@
 
     </script>
 </body>
+
 </html>
