github didnt like a IMAGE EXTENSION

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <h1 class="sub-title">My Work</h1>
             <div class="work-list">
                 <div class="work">
-                    <img id="wind" src="images/windTurbine.jpeg">
+                    <img id="wind" src="images/windTurbine.png">
                     <div class="layer">
                         <h3>Wind Tubine</h3>
                         <p>Self Powered Electric Wind Turbine</p>
@@ -111,7 +111,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img id="wind" src="images/windTurbine.jpeg">
+                    <img id="wind" src="images/windTurbine.png">
                     <div class="layer">
                         <h3>Wind Tubine</h3>
                         <p>Self Powered Electric Wind Turbine</p>
@@ -119,7 +119,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img id="wind" src="images/windTurbine.jpeg">
+                    <img id="wind" src="images/windTurbine.png">
                     <div class="layer">
                         <h3>Wind Tubine</h3>
                         <p>Self Powered Electric Wind Turbine</p>
