--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
                 <div class="contact-left">
                     <h1 class="sub-title">Contact Me</h1>
                     <p><i class="fa-solid fa-paper-plane"></i> Mtzaxl23@gmail.com</p>
-                    <p><i class="fa-solid fa-phone"></i> (503) 860-1773</p>
                     <div class="social-icons">
                         <a href="https://github.com/martinea23"><i class="fa-brands fa-github"></i></a>
                         <a href="https://www.instagram.com/axl_mtz04"><i class="fa-brands fa-instagram"></i></a>
+                        <a href=""><i class="fa-brands fa-linkedin"></i></a>
                     </div>
                     <a href="images/RESUME.pdf" download class="btn btn2">Download Resume</a>
                 </div>
