--- a/index.html
+++ b/index.html
@@ -145,12 +145,13 @@
                     <a href="images/RESUME.pdf" download class="btn btn2">Download Resume</a>
                 </div>
                 <div class="contact-right">
-                    <form>
+                    <form name="submit-to-google-sheet">
                         <input type="text" name="Name" placeholder="Your Name" required>
                         <input type="email" name="Email" placeholder="Your Email" required>
-                        <textarea name="message" rows="6" placeholder="Your Message"></textarea>
+                        <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
                         <button type="submit" class="btn btn2">Send</button>
                     </form>
+                    <span id="msg"></span>
                 </div>
             </div>
         </div>
@@ -172,6 +173,25 @@
         }
 
     </script>
+
+<script>
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbwYQtMNN44Uqnzl1lIKf5QyZgLMDJ3Bx7Z1XFue8iujlAoDBsreuY0rqkbiHtq69Z2I/exec'
+    const form = document.forms['submit-to-google-sheet']
+    const msg = document.getElementById("msg");
+
+    form.addEventListener('submit', e => {
+      e.preventDefault()
+      fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+        .then(response => {
+            msg.innerHTML="Message Sent Successfully! Thank You"
+            setTimeout(function(){
+                msg.innerHTML=""
+            }, 5000)
+            form.reset()
+        })
+        .catch(error => console.error('Error!', error.message))
+    })
+  </script>
 </body>
 
 </html>
