--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
             <nav>
                 <img src="images/logo.png" class="logo">
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Projects</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="About.html">About</a></li>
+                    <li><a href="Projects.html">Projects</a></li>
+                    <li><a href="Career.html">Career</a></li>
+                    <li><a href="Contact.html">Contact</a></li>
                 </ul>
             </nav>
             <div class="header-text">
