--- a/Projects.html
+++ b/Projects.html
@@ -16,10 +16,10 @@
                 <img src="images/logo.png" class="logo">
                 <ul>
                     <li><a href="./">Home</a></li>
-                    <li><a href="./Pages/About">About</a></li>
-                    <li><a href="./Pages/Projects">Projects</a></li>
-                    <li><a href="./Pages/Career">Career</a></li>
-                    <li><a href="./Pages/Contact">Contact</a></li>
+                    <li><a href="./About">About</a></li>
+                    <li><a href="./Projects">Projects</a></li>
+                    <li><a href="./Career">Career</a></li>
+                    <li><a href="./Contact">Contact</a></li>
                 </ul>
             </nav>
         </div>
