--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Axl Martinez Website</title>
-    <link rel="stylesheet" href="Styles/HomeStyle.css">
+    <title>Axl Martinez</title>
+    <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/9d9a242272.js" crossorigin="anonymous"></script>
 </head>
 
@@ -16,10 +16,10 @@
                 <img src="images/logo.png" class="logo">
                 <ul>
                     <li><a href="./">Home</a></li>
-                    <li><a href="./Pages/About">About</a></li>
-                    <li><a href="./Pages/Projects">Projects</a></li>
-                    <li><a href="./Pages/Career">Career</a></li>
-                    <li><a href="./Pages/Contact">Contact</a></li>
+                    <li><a href="./About">About</a></li>
+                    <li><a href="./Projects">Projects</a></li>
+                    <li><a href="./Career">Career</a></li>
+                    <li><a href="./Contact">Contact</a></li>
                 </ul>
             </nav>
             <div class="header-text">
