adding more supoorted devices and projects

--- a/Projects.html
+++ b/Projects.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Axl Martinez Website</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Projects.css">
     <script src="https://kit.fontawesome.com/9d9a242272.js" crossorigin="anonymous"></script>
 </head>
 
@@ -22,6 +22,65 @@
                     <li><a href="./Contact">Contact</a></li>
                 </ul>
             </nav>
+        </div>
+    </div>
+
+    <div class="portfolio">
+        <div class="container">
+            <h1 class="sub-title">My Work</h1>
+            <div class="work-list">
+                <div class="work">
+                    <img id="wind" src="images/windTurbine.png">
+                    <div class="layer">
+                        <h3>Wind Tubine</h3>
+                        <p>Self Powered Electric Wind Turbine</p>
+                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    </div>
+                </div>
+                <div class="work">
+                    <img id="wind" src="images/windTurbine.png">
+                    <div class="layer">
+                        <h3>Wind Tubine</h3>
+                        <p>Self Powered Electric Wind Turbine</p>
+                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    </div>
+                </div>
+                <div class="work">
+                    <img id="wind" src="images/windTurbine.png">
+                    <div class="layer">
+                        <h3>Wind Tubine</h3>
+                        <p>Self Powered Electric Wind Turbine</p>
+                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="contact">
+        <div class="container">
+            <div class="row">
+                <div class="contact-left">
+                    <h1 class="sub-title">Contact Me</h1>
+                    <p><i class="fa-solid fa-paper-plane"></i> Mtzaxl23@gmail.com</p>
+                    <div class="social-icons">
+                        <a href="https://github.com/martinea23"><i class="fa-brands fa-github"></i></a>
+                        <a href="https://www.instagram.com/axl_mtz04"><i class="fa-brands fa-instagram"></i></a>
+                        <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                    </div>
+                    <a href="images/RESUME.pdf" download class="btn btn2">Download Resume</a>
+                </div>
+                <div class="contact-right">
+                    <h1 class="sub-title">Message Me</h1>
+                    <form name="submit-to-google-sheet">
+                        <input type="text" name="Name" placeholder="Your Name" required>
+                        <input type="email" name="Email" placeholder="Your Email" required>
+                        <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
+                        <button type="submit" class="btn">Send</button>
+                    </form>
+                    <span id="msg"></span>
+                </div>
+            </div>
         </div>
     </div>
 </body>
