--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </nav>
             <div class="header-text">
                 <p>Avid Programmer</p>
-                <h1>Hi, im <span>Axl</span> Martinez <br>From Portland, Oregon</h1>
+                <h1>Hi, I'm <span>Axl</span> Martinez <br>From Oregon</h1>
             </div>
         </div>
     </div>
@@ -37,36 +37,20 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="subtitle">About Me</h1>
-                    <p>hfasjkldhfjklasdhfjkladshjklfhajklsdhfjkladshfjklhasdjklhfjkladshfk
-                        dashkjflhalsdkjhflajksdhfkljadhsklfjhadskljhfa
-                        asdhjkfjlhasdljkfhlakjsdhfkljashdfjklfhadjklshfkljasdhf
+                    <p class="abtText">
+                        Hello, I'm Axl Martinez, a passionate computer scientist and creative problem solver.
+                        I earned my Bachelor's degree in Computer Science from the University of Portland, 
+                        where I honed my skills and developed a deep appreciation for the world of technology.
+                        I find joy in coding and bringing my own projects to life, 
+                        constantly seeking new ways to innovate and make a positive impact through software development. 
+                        When I'm not immersed in the digital realm, you can often find me on a soccer field, 
+                        enjoying the beautiful game and the camaraderie it brings. 
+                        I'm also an avid traveler, always eager to explore new places and cultures, 
+                        which fuels my curiosity and broadens my perspective. 
+                        Whether it's crafting lines of code or exploring far-off destinations, 
+                        I'm dedicated to embracing the journey of life with enthusiasm and a thirst for knowledge.
                     </p>
-                    <div class="tab-titles">
-                        <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
-                        <p class="tab-links" onclick="opentab('experience')">Experience</p>
-                        <p class="tab-links" onclick="opentab('education')">Education</p>
-                    </div>
-                    <div class="tab-contents active-tab" id="skills">
-                        <ul>
-                            <li><span>UI?UX</span><br> Designing Web/app interfaces</li>
-                            <li><span>Web development</span><br> Designing Web/app interfaces</li>
-                            <li><span>App development</span><br> Designing Web/app interfaces</li>
-                        </ul>
-                    </div>
-                    <div class="tab-contents" id="experience">
-                        <ul>
-                            <li><span>RP Sports</span><br> Designing Web/app interfaces</li>
-                            <li><span>Tech Assistant</span><br> Designing Web/app interfaces</li>
-                            <li><span>Teacher Assistant</span><br> Designing Web/app interfaces</li>
-                        </ul>
-                    </div>
-                    <div class="tab-contents" id="education">
-                        <ul>
-                            <li><span>University of Portland</span><br> Bachleors of Computer Science</li>
-                            <li><span>Central Catholic High School</span><br> graduated with Honors and Spanish
-                                excellency award</li>
-                        </ul>
-                    </div>
+                    <a href="./About" class="btn">Read More</a>
                 </div>
             </div>
         </div>
@@ -145,53 +129,37 @@
                     <a href="images/RESUME.pdf" download class="btn btn2">Download Resume</a>
                 </div>
                 <div class="contact-right">
+                    <h1 class="sub-title">Message Me</h1>
                     <form name="submit-to-google-sheet">
                         <input type="text" name="Name" placeholder="Your Name" required>
                         <input type="email" name="Email" placeholder="Your Email" required>
                         <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
-                        <button type="submit" class="btn btn2">Send</button>
+                        <button type="submit" class="btn">Send</button>
                     </form>
                     <span id="msg"></span>
                 </div>
             </div>
         </div>
     </div>
-    <!----Script for changing tabs in about me---->
+    <!----Script for Sending me the messages---->
     <script>
-        var tablinks = document.getElementsByClassName("tab-links");
-        var tabcontents = document.getElementsByClassName("tab-contents");
+        const scriptURL = 'https://script.google.com/macros/s/AKfycbwYQtMNN44Uqnzl1lIKf5QyZgLMDJ3Bx7Z1XFue8iujlAoDBsreuY0rqkbiHtq69Z2I/exec'
+        const form = document.forms['submit-to-google-sheet']
+        const msg = document.getElementById("msg");
 
-        function opentab(tabName) {
-            for (tablink of tablinks) {
-                tablink.classList.remove("active-link");
-            }
-            for (tabcontent of tabcontents) {
-                tabcontent.classList.remove("active-tab");
-            }
-            event.currentTarget.classList.add("active-link");
-            document.getElementById(tabName).classList.add("active-tab");
-        }
-
-    </script>
-
-<script>
-    const scriptURL = 'https://script.google.com/macros/s/AKfycbwYQtMNN44Uqnzl1lIKf5QyZgLMDJ3Bx7Z1XFue8iujlAoDBsreuY0rqkbiHtq69Z2I/exec'
-    const form = document.forms['submit-to-google-sheet']
-    const msg = document.getElementById("msg");
-
-    form.addEventListener('submit', e => {
-      e.preventDefault()
-      fetch(scriptURL, { method: 'POST', body: new FormData(form)})
-        .then(response => {
-            msg.innerHTML="Message Sent Successfully! Thank You"
-            setTimeout(function(){
-                msg.innerHTML=""
-            }, 5000)
-            form.reset()
+        form.addEventListener('submit', e => {
+            e.preventDefault()
+            fetch(scriptURL, { method: 'POST', body: new FormData(form) })
+                .then(response => {
+                    msg.innerHTML = "Message Sent Successfully! Thank You"
+                    setTimeout(function () {
+                        msg.innerHTML = ""
+                    }, 5000)
+                    form.reset()
+                })
+                .catch(error => console.error('Error!', error.message))
         })
-        .catch(error => console.error('Error!', error.message))
-    })
-  </script>
+    </script>
 </body>
 
 </html>
