--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     </div>
                 </div>
             </div>
-            <a href="#" class="btn">See More</a>
+            <a href="./Projects.html" class="btn">See More</a>
         </div>
     </div>
     <!-------------Contact------------->
