Minor Chnages to Launch while Developing

--- a/About.html
+++ b/About.html
@@ -23,6 +23,8 @@
                 </ul>
             </nav>
         </div>
+
+        <h1 class="subtitle">UNDER CONSTRUCTION</h1>
     </div>
 </body>
 
