--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <p>Avid Programmer</p>
                 <h1>Hi, I'm <span>Axl</span> Martinez <br>From Oregon</h1>
             </div>
+            <a href="images/RESUME.pdf" download class="btn btn2">Download Resume</a>
         </div>
     </div>
     <!---------------about----------------------->
@@ -63,19 +64,19 @@
                 <div>
                     <i class="fa-solid fa-code"></i>
                     <h2>Web Design</h2>
-                    <p>sadhfjklhdfkjldashfklhaskljd</p>
+                    <p>Online Presence Through Websites!</p>
                     <a href="#">Learn More</a>
                 </div>
                 <div>
                     <i class="fa-brands fa-app-store"></i>
                     <h2>App Design</h2>
-                    <p>sadhfjklhdfkjldashfklhaskljd</p>
+                    <p>Mobile APP Development</p>
                     <a href="#">Learn More</a>
                 </div>
                 <div>
-                    <i class="fa-solid fa-crop"></i>
-                    <h2>UI/UX Design</h2>
-                    <p>sadhfjklhdfkjldashfklhaskljd</p>
+                    <i class="fa-solid fa-video"></i>
+                    <h2>Video/Photo Editing</h2>
+                    <p>Get the Best From Your Content</p>
                     <a href="#">Learn More</a>
                 </div>
             </div>
@@ -124,7 +125,7 @@
                     <div class="social-icons">
                         <a href="https://github.com/martinea23"><i class="fa-brands fa-github"></i></a>
                         <a href="https://www.instagram.com/axl_mtz04"><i class="fa-brands fa-instagram"></i></a>
-                        <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                        <a href="https://www.linkedin.com/in/axlmtz/"><i class="fa-brands fa-linkedin"></i></a>
                     </div>
                     <a href="images/RESUME.pdf" download class="btn btn2">Download Resume</a>
                 </div>
