--- a/Contact.html
+++ b/Contact.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div id="header">
+    <div id="headerNoBkg">
         <div class="container">
             <nav>
                 <img src="images/logo.png" class="logo">
@@ -22,6 +22,33 @@
                     <li><a href="./Contact">Contact</a></li>
                 </ul>
             </nav>
+        </div>
+    </div>
+
+    <div class="contact">
+        <div class="container">
+            <div class="row">
+                <div class="contact-left">
+                    <h1 class="sub-title">Contact Me</h1>
+                    <p><i class="fa-solid fa-paper-plane"></i> Mtzaxl23@gmail.com</p>
+                    <div class="social-icons">
+                        <a href="https://github.com/martinea23"><i class="fa-brands fa-github"></i></a>
+                        <a href="https://www.instagram.com/axl_mtz04"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/in/axlmtz/"><i class="fa-brands fa-linkedin"></i></a>
+                    </div>
+                    <a href="images/RESUME.pdf" download class="btn btn2">Download Resume</a>
+                </div>
+                <div class="contact-right">
+                    <h1 class="sub-title">Message Me</h1>
+                    <form name="submit-to-google-sheet">
+                        <input type="text" name="Name" placeholder="Your Name" required>
+                        <input type="email" name="Email" placeholder="Your Email" required>
+                        <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
+                        <button type="submit" class="btn">Send</button>
+                    </form>
+                    <span id="msg"></span>
+                </div>
+            </div>
         </div>
     </div>
 </body>
