Landing Page should be compplete

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <p>Avid Programmer</p>
                 <h1>Hi, I'm <span>Axl</span> Martinez <br>From Oregon</h1>
             </div>
-            <a href="images/RESUME.pdf" download class="btn btn2">Download Resume</a>
+            <a href="images/RESUME.pdf" download class="btn btn2 btn3">Download Resume</a>
         </div>
     </div>
     <!---------------about----------------------->
@@ -88,7 +88,9 @@
             <h1 class="sub-title">My Work</h1>
             <div class="work-list">
                 <div class="work">
-                    <img id="wind" src="images/windTurbine.png">
+                    <div class="img-cont">
+                        <img id="wind" src="images/windTurbine.png">
+                    </div>
                     <div class="layer">
                         <h3>Wind Tubine</h3>
                         <p>Self Powered Electric Wind Turbine</p>
@@ -96,18 +98,22 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img id="wind" src="images/windTurbine.png">
+                    <div class="img-cont">
+                        <img id="wind" src="images/AR-Webapp.png">
+                    </div>
                     <div class="layer">
-                        <h3>Wind Tubine</h3>
-                        <p>Self Powered Electric Wind Turbine</p>
+                        <h3>AR Web App</h3>
+                        <p>Augmented Reality Data Visualization</p>
                         <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
-                    <img id="wind" src="images/windTurbine.png">
+                    <div class="img-cont">
+                        <img id="wind" src="images/WP-Site_lcrsports.png">
+                    </div>
                     <div class="layer">
-                        <h3>Wind Tubine</h3>
-                        <p>Self Powered Electric Wind Turbine</p>
+                        <h3>Word Press Website</h3>
+                        <p>Website Designed For Client in Word Press</p>
                         <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
