background gradient in projects also bub anim strt

--- a/Projects.html
+++ b/Projects.html
@@ -23,9 +23,10 @@
                     <li><a href="./Contact">Contact</a></li>
                 </ul>
             </nav>
+            <div id="bubbles">
+            </div>
         </div>
     </div>
-
     <div id="image-track" data-mouse-down-at="0" data-prev-percentage="0">
         <img class="image" src="images/projects/AR-Webapp.png" draggable="false"/>
         <img class="image" src="images/projects/windTurbine.png" draggable="false"/>
@@ -33,6 +34,7 @@
     </div>
     <script src="Scripts/imageSlider.js"></script>
     <script src="Scripts/menuLightup.js"></script>
+    <script src="Scripts/bubbleMaker.js"></script>
 </body>
 
 </html>
