mobile formatting for header

--- a/Projects.html
+++ b/Projects.html
@@ -12,7 +12,7 @@
 
 <body>
     <div id="header">
-        <div class="container">
+        <div class="menuContainer">
             <nav>
                 <img src="images/logo.png" class="logo">
                 <ul>
