i had removed the bubbles

--- a/Projects.html
+++ b/Projects.html
@@ -11,26 +11,28 @@
 </head>
 
 <body>
-    <div id="header">
-        <div class="menuContainer">
-            <nav>
-                <img src="images/logo.png" class="logo">
-                <ul>
-                    <li><a href="./">Home</a></li>
-                    <li><a href="./About">About</a></li>
-                    <li><a href="./Projects">Projects</a></li>
-                    <li><a href="./Career">Career</a></li>
-                    <li><a href="./Contact">Contact</a></li>
-                </ul>
-            </nav>
-            <div id="bubbles">
-            </div>
-        </div>
+    <div class="menuContainer">
+        <nav>
+            <a class="menuMob"><i class="fa-solid fa-bars"></i></a>
+            <img src="images/logo.png" class="logo">
+            <ul>
+                <li><a href="./">Home</a></li>
+                <li><a href="./About">About</a></li>
+                <li><a href="./Projects">Projects</a></li>
+                <li><a href="./Career">Career</a></li>
+                <li><a href="./Contact">Contact</a></li>
+            </ul>
+            <a href="images/RESUME.pdf" download class="resumeDown">Resume &nbsp; <i
+                    class="fa-solid fa-download"></i></a>
+        </nav>
+
+    </div>
+    <div id="bubbles">
     </div>
     <div id="image-track" data-mouse-down-at="0" data-prev-percentage="0">
-        <img class="image" src="images/projects/AR-Webapp.png" draggable="false"/>
-        <img class="image" src="images/projects/windTurbine.png" draggable="false"/>
-        <img class="image" src="images/projects/WP-Site_lcrsports.png" draggable="false"/>
+        <img class="image" src="images/projects/AR-Webapp.png" draggable="false" />
+        <img class="image" src="images/projects/windTurbine.png" draggable="false" />
+        <img class="image" src="images/projects/WP-Site_lcrsports.png" draggable="false" />
     </div>
     <script src="Scripts/imageSlider.js"></script>
     <script src="Scripts/menuLightup.js"></script>
