nav bar formatting for diff sizes

--- a/Projects.html
+++ b/Projects.html
@@ -34,9 +34,12 @@
         <img class="image" src="images/projects/windTurbine.png" draggable="false" />
         <img class="image" src="images/projects/WP-Site_lcrsports.png" draggable="false" />
     </div>
+
+     <!---------------Scripts----------------------->
     <script src="Scripts/imageSlider.js"></script>
     <script src="Scripts/menuLightup.js"></script>
     <script src="Scripts/bubbleMaker.js"></script>
+    <script src="Scripts/menuHide.js"></script>
 </body>
 
 </html>
