slide ove menu is working basic no css yet

--- a/index.html
+++ b/index.html
@@ -26,6 +26,19 @@
                     class="fa-solid fa-download"></i></a>
         </nav>
     </div>
+
+    <div class="mobMenuCont">
+        <ul>
+            <li><a href="./">Home</a></li>
+            <li><a href="./About">About</a></li>
+            <li><a href="./Projects">Projects</a></li>
+            <li><a href="./Career">Career</a></li>
+            <li><a href="./Contact">Contact</a></li>
+        </ul>
+        <a href="images/RESUME.pdf" download class="resumeDownMob">Resume &nbsp; <i
+            class="fa-solid fa-download"></i></a>
+    </div>
+
     <div id="header">
         <div class="header-text">
             <p>Avid Programmer</p>
@@ -157,6 +170,7 @@
     <script src="Scripts/menuLightup.js"></script>
     <script src="Scripts/messageForm.js"></script>
     <script src="Scripts/menuHide.js"></script>
+    <script src="Scripts/slideMobMenu.js"></script>
 </body>
 
 </html>
