menu finally done for all devices

--- a/About.html
+++ b/About.html
@@ -29,3 +29,14 @@
 </body>
 
 </html>
+<!-- 
+I earned my Bachelor's degree in Computer Science from the University of Portland,
+                        where I honed my skills and developed a deep appreciation for the world of technology.
+                        I find joy in coding and bringing my own projects to life,
+                        constantly seeking new ways to innovate and make a positive impact through software development.
+                        When I'm not immersed in the digital realm, you can often find me on a soccer field,
+                        enjoying the beautiful game and the camaraderie it brings.
+                        I'm also an avid traveler, always eager to explore new places and cultures,
+                        which fuels my curiosity and broadens my perspective.
+                        Whether it's crafting lines of code or exploring far-off destinations,
+                        I'm dedicated to embracing the journey of life with enthusiasm and a thirst for knowledge. -->
