--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a class="menuMob"><i class="fa-solid fa-bars"></i></a>
             <img src="images/logo.png" class="logo">
             <ul>
-                <li><a href="./">Home</a></li>
+                <li><a href="./" class="active">Home</a></li>
                 <li><a href="./About">About</a></li>
                 <li><a href="./Projects">Projects</a></li>
                 <li><a href="./Career">Career</a></li>
@@ -29,14 +29,17 @@
 
     <div class="mobMenuCont">
         <ul>
-            <li><a href="./">Home</a></li>
+            <li><a href="./" class="active">Home</a></li>
             <li><a href="./About">About</a></li>
             <li><a href="./Projects">Projects</a></li>
             <li><a href="./Career">Career</a></li>
             <li><a href="./Contact">Contact</a></li>
         </ul>
         <a href="images/RESUME.pdf" download class="resumeDownMob">Resume &nbsp; <i
-            class="fa-solid fa-download"></i></a>
+            class="fa-solid fa-download"></i>
+        </a>
+        <div id="bubbles">
+        </div>
     </div>
 
     <div id="header">
@@ -57,16 +60,6 @@
                     <h1 class="subtitle">About Me</h1>
                     <p class="abtText">
                         Hello, I'm Axl Martinez, a passionate computer scientist and creative problem solver.
-                        I earned my Bachelor's degree in Computer Science from the University of Portland,
-                        where I honed my skills and developed a deep appreciation for the world of technology.
-                        I find joy in coding and bringing my own projects to life,
-                        constantly seeking new ways to innovate and make a positive impact through software development.
-                        When I'm not immersed in the digital realm, you can often find me on a soccer field,
-                        enjoying the beautiful game and the camaraderie it brings.
-                        I'm also an avid traveler, always eager to explore new places and cultures,
-                        which fuels my curiosity and broadens my perspective.
-                        Whether it's crafting lines of code or exploring far-off destinations,
-                        I'm dedicated to embracing the journey of life with enthusiasm and a thirst for knowledge.
                     </p>
 
                     <a href="./About" class="btn">Read More</a>
@@ -169,8 +162,7 @@
     <!----Scripts---->
     <script src="Scripts/menuLightup.js"></script>
     <script src="Scripts/messageForm.js"></script>
-    <script src="Scripts/menuHide.js"></script>
-    <script src="Scripts/slideMobMenu.js"></script>
+    <script src="Scripts/mobileMenu.js"></script>
 </body>
 
 </html>
