--- a/Projects.html
+++ b/Projects.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="menuContainer">
-        <nav>
+        <nav> 
             <a class="menuMob"><i class="fa-solid fa-bars"></i></a>
             <img src="images/logo.png" class="logo">
             <ul>
@@ -25,10 +25,23 @@
             <a href="images/RESUME.pdf" download class="resumeDown">Resume &nbsp; <i
                     class="fa-solid fa-download"></i></a>
         </nav>
+    </div>
 
+    <div class="mobMenuCont">
+        <ul>
+            <li><a href="./">Home</a></li>
+            <li><a href="./About">About</a></li>
+            <li><a href="./Projects" class="active">Projects</a></li>
+            <li><a href="./Career">Career</a></li>
+            <li><a href="./Contact">Contact</a></li>
+        </ul>
+        <a href="images/RESUME.pdf" download class="resumeDownMob">Resume &nbsp; <i
+            class="fa-solid fa-download"></i>
+        </a>
+        <div id="bubbles">
+        </div>
     </div>
-    <div id="bubbles">
-    </div>
+    
     <div id="image-track" data-mouse-down-at="0" data-prev-percentage="0">
         <img class="image" src="images/projects/AR-Webapp.png" draggable="false" />
         <img class="image" src="images/projects/windTurbine.png" draggable="false" />
@@ -38,8 +51,7 @@
      <!---------------Scripts----------------------->
     <script src="Scripts/imageSlider.js"></script>
     <script src="Scripts/menuLightup.js"></script>
-    <script src="Scripts/bubbleMaker.js"></script>
-    <script src="Scripts/menuHide.js"></script>
+    <script src="Scripts/mobileMenu.js"></script>
 </body>
 
 </html>
