--- a/About.html
+++ b/About.html
@@ -6,26 +6,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Axl Martinez Website</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Styles/Header.css">
     <script src="https://kit.fontawesome.com/9d9a242272.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <div id="header">
-        <div class="container">
-            <nav>
-                <img src="images/logo.png" class="logo">
-                <ul>
-                    <li><a href="./">Home</a></li>
-                    <li><a href="./About">About</a></li>
-                    <li><a href="./Projects">Projects</a></li>
-                    <li><a href="./Career">Career</a></li>
-                    <li><a href="./Contact">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
-
-        <h1 class="subtitle">UNDER CONSTRUCTION</h1>
+    <div class="menuContainer">
+        <nav>
+            <a class="menuMob"><i class="fa-solid fa-bars"></i></a>
+            <img src="images/logo.png" class="logo">
+            <ul>
+                <li><a href="./">Home</a></li>
+                <li><a href="./About" class="active">About</a></li>
+                <li><a href="./Projects">Projects</a></li>
+                <li><a href="./Career">Career</a></li>
+                <li><a href="./Contact">Contact</a></li>
+            </ul>
+            <a href="images/RESUME.pdf" download class="resumeDown">Resume &nbsp; <i
+                    class="fa-solid fa-download"></i></a>
+        </nav>
     </div>
+
+    <div class="mobMenuCont">
+        <ul>
+            <li><a href="./">Home</a></li>
+            <li><a href="./About" class="active">About</a></li>
+            <li><a href="./Projects">Projects</a></li>
+            <li><a href="./Career">Career</a></li>
+            <li><a href="./Contact">Contact</a></li>
+        </ul>
+        <a href="images/RESUME.pdf" download class="resumeDownMob">Resume &nbsp; <i class="fa-solid fa-download"></i>
+        </a>
+        <div id="bubbles">
+        </div>
+    </div>
+
+    <h1 class="subtitle">UNDER CONSTRUCTION</h1>
+    <script src="Scripts/menuLightup.js"></script>
+    <script src="Scripts/mobileMenu.js"></script>
 </body>
 
 </html>
