reconnnecting css files

--- a/About.html
+++ b/About.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Axl Martinez Website</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Styles/About.css">
     <link rel="stylesheet" href="Styles/Header.css">
     <script src="https://kit.fontawesome.com/9d9a242272.js" crossorigin="anonymous"></script>
 </head>
@@ -41,7 +41,9 @@
         </div>
     </div>
 
-    <h1 class="subtitle">UNDER CONSTRUCTION</h1>
+    <div class="abtSec">
+        <h1>HELLO</h1>
+    </div>
     <script src="Scripts/menuLightup.js"></script>
     <script src="Scripts/mobileMenu.js"></script>
 </body>
