background effect complete

--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
     <script src="Scripts/menuLightup.js"></script>
     <script src="Scripts/messageForm.js"></script>
     <script src="Scripts/mobileMenu.js"></script>
+    <script src="Scripts/bgMoves.js"></script>
 </body>
 
 </html>
