almost done with home

--- a/index.html
+++ b/index.html
@@ -72,19 +72,19 @@
         <div class="container">
             <h1 class="servHeader">My Services</h1>
             <div class="services-list">
-                <div class="serv hidden">
+                <div class="serv hidden3">
                     <i class="fa-solid fa-code"></i>
                     <h2>Web Design</h2>
                     <p>Online Presence Through Websites!</p>
                     <a href="#">Learn More</a>
                 </div>
-                <div class="serv hidden">
+                <div class="serv hidden3">
                     <i class="fa-brands fa-app-store"></i>
                     <h2>App Design</h2>
                     <p>Mobile APP Development</p>
                     <a href="#">Learn More</a>
                 </div>
-                <div class="serv hidden">
+                <div class="serv hidden3">
                     <i class="fa-solid fa-video"></i>
                     <h2>Video/Photo Editing</h2>
                     <p>Get the Best From Your Content</p>
@@ -94,9 +94,12 @@
         </div>
     </div>
     <!-------------Portfolio------------->
+    <div class="proCont">
+
+    
     <h1 class="servHeader">Projects</h1>
     <div class="projectContainer">
-        <div class="item item1 hidden">
+        <div class="item item1 hidden2">
             <h1>Wind Turbine</h1>
             <img id="windT" src="images/projects/windTurbine.png"/>
             <p> dhjsafkl;fhjas ;fhjads ;kljfhjkoadlshfjklads hfjkladsh adfklsh fkljashd flkjadhs 
@@ -106,7 +109,7 @@
         </div>
         <div class="nothing"></div>
         <div class="nothing"></div>
-        <div class="item item2 hidden">
+        <div class="item item2 hidden2">
             <h1>AR Webapp</h1>
             <img id="windT" src="images/projects/AR-Webapp.png"/>
             <p> dhjsafkl;fhjas ;fhjads ;kljfhjkoadlshfjklads hfjkladsh adfklsh fkljashd flkjadhs 
@@ -114,7 +117,7 @@
                 adhsjkf hadklsjh fadsjh flkjadsh fjkladsh fjkasdh flaksdjh faljksdh fajklsdh ajkdhsf 
             </p>
         </div>
-        <div class="item item3 hidden">
+        <div class="item item3 hidden2">
             <h1>Website</h1>
             <img id="windT" src="images/projects/WP-Site_lcrsports.png"/>
             <p> dhjsafkl;fhjas ;fhjads ;kljfhjkoadlshfjklads hfjkladsh adfklsh fkljashd flkjadhs 
@@ -122,11 +125,18 @@
                 adhsjkf hadklsjh fadsjh flkjadsh fjkladsh fjkasdh flaksdjh faljksdh fajklsdh ajkdhsf 
             </p>
         </div>
-
-
-        <div class="middleLine"></div>
+        <div class="nothing"></div>
+        <div class="nothing"></div>
+        <div class="item item2 hidden2">
+            <h1>AR Webapp</h1>
+            <img id="windT" src="images/projects/AR-Webapp.png"/>
+            <p> dhjsafkl;fhjas ;fhjads ;kljfhjkoadlshfjklads hfjkladsh adfklsh fkljashd flkjadhs 
+                h adsljkfh jkladsh fjkladsh fjkladsh fjkladsh flkjads hfkljadsh fljkadsh fadjkls hfkladjs
+                adhsjkf hadklsjh fadsjh flkjadsh fjkladsh fjkasdh flaksdjh faljksdh fajklsdh ajkdhsf 
+            </p>
+        </div>
     </div>
-    
+    </div>
     <!-------------Contact------------->
     <div class="contact">
         <div class="container">
